기본적인 main push pull하셔서 branch만드시고 작업하시면 됩니다.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NftAction</name>
+	<name>NftAuction</name>
 	<comment></comment>
 	<projects>
 	</projects>
