6/24 commit fist window builder  basic,missing,new

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -4,3 +4,19 @@
 /practice$2.class
 /basic.class
 /Basic.class
+/NewUser.class
+/Basic$1.class
+/NewUser$1.class
+/MissingID$1.class
+/MissingID.class
+/MissingID$2.class
+/Basic$2.class
+/Basic$3.class
+/Basic1$1.class
+/Basic1$2.class
+/Basic1$3.class
+/Basic1.class
+/NewUser1$1.class
+/NewUser1.class
+/NewUser$2.class
+/MissingID$3.class
