basic -> logInBefore(rename), add(visible) NewUser -> add(alert) MissingID -> add(alert,phrases) add(logInAfter) -> add(alert)

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -20,3 +20,14 @@
 /NewUser1.class
 /NewUser$2.class
 /MissingID$3.class
+/MissingID$4.class
+/NewUser$3.class
+/logInAfter$1.class
+/logInAfter.class
+/Basic$4.class
+/logInAfter$2.class
+/logInBefore$1.class
+/logInBefore$2.class
+/logInBefore$3.class
+/logInBefore$4.class
+/logInBefore.class
