total -add(db 연동)
loginBefore -> logIn(change)
NewUser - add(NickName)
loginAfter -> logOut(change)
logOut -> add(point)
(add) -> connectDB class

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -34,3 +34,12 @@
 /practice$3.class
 /practice$4.class
 /connecDb.class
+/connecJava.class
+/logIn.class
+/logIn$1.class
+/logIn$2.class
+/logIn$3.class
+/logIn$4.class
+/logOut.class
+/logOut$1.class
+/logOut$2.class
