--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/BM_project/NFTAuctionTeamProject/ojdbc8.jar">
+	<classpathentry kind="lib" path="C:/Users/harteh/Downloads/ojdbc8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
