포인트 join / db에서 이미지 출력 처리 못함

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -43,3 +43,10 @@
 /logOut.class
 /logOut$1.class
 /logOut$2.class
+/Img.class
+/Img$1.class
+/Img$2.class
+/NewUser$4.class
+/NewUser$5.class
+/NewUser$6.class
+/test_Frame.class
