--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="../lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/Work/java/lib/oraclepki.jar"/>
+	<classpathentry kind="lib" path="C:/Work/java/lib/osdt_cert.jar"/>
+	<classpathentry kind="lib" path="C:/Work/java/lib/osdt_core.jar"/>
+	<classpathentry kind="lib" path="C:/Work/java/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/Work/java/lib/ucp.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
