--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="image"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/app/lee31/product/21c/dbhomeXE/jdbc/lib/ojdbc11.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/app/lee31/product/21c/dbhomeXE/jdbc/lib/ojdbc11.jar"/>
-=======
-	<classpathentry kind="lib" path="../lib/ojdbc8.jar"/>
-	<classpathentry kind="lib" path="../lib/ucp.jar"/>
->>>>>>> refs/remotes/origin/msb
 	<classpathentry kind="output" path="bin"/>
 </classpath>
